MCU_Fundamentals/MCU_Interrupts/project1_stm/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
15:31:12 **** Build of configuration Debug for project EXT_INT0 ****
make -j8 all 
arm-none-eabi-gcc -gdwarf-2 -mcpu=cortex-m3 -g3 -c -x assembler-with-cpp -MMD -MP -MF"Startup/startup_stm32f103c6tx.d" -MT"Startup/startup_stm32f103c6tx.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Startup/startup_stm32f103c6tx.o" "../Startup/startup_stm32f103c6tx.s"
arm-none-eabi-gcc -gdwarf-2 "../Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DSTM32 -DSTM32F1 -DSTM32F103C6Tx -DDEBUG -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/main.o"
arm-none-eabi-gcc -gdwarf-2 "../Src/syscalls.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DSTM32 -DSTM32F1 -DSTM32F103C6Tx -DDEBUG -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/syscalls.d" -MT"Src/syscalls.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/syscalls.o"
arm-none-eabi-gcc -gdwarf-2 "../Src/sysmem.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DSTM32 -DSTM32F1 -DSTM32F103C6Tx -DDEBUG -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/sysmem.d" -MT"Src/sysmem.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/sysmem.o"
../Src/main.c: In function 'GPIO_init':
../Src/main.c:43:59: error: 'GPIO_BASE' undeclared (first use in this function); did you mean 'GPIOA_BASE'?
 #define GPIOA_CRH              *(volatile unsigned int *)(GPIO_BASE+0x04)
                                                           ^
../Src/main.c:67:3: note: in expansion of macro 'GPIOA_CRH'
   GPIOA_CRH &=0xFF0FFFF;
   ^~~~~~~~~
../Src/main.c:43:59: note: each undeclared identifier is reported only once for each function it appears in
 #define GPIOA_CRH              *(volatile unsigned int *)(GPIO_BASE+0x04)
                                                           ^
../Src/main.c:67:3: note: in expansion of macro 'GPIOA_CRH'
   GPIOA_CRH &=0xFF0FFFF;
   ^~~~~~~~~
make: *** [Src/subdir.mk:24: Src/main.o] Error 1
make: *** Waiting for unfinished jobs....
"make -j8 all" terminated with exit code 2. Build might be incomplete.
15:31:51 **** Incremental Build of configuration Debug for project EXT_INT0 ****
make -j8 all 
arm-none-eabi-gcc -gdwarf-2 "../Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DSTM32 -DSTM32F1 -DSTM32F103C6Tx -DDEBUG -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/main.o"
arm-none-eabi-gcc -gdwarf-2 -o "EXT_INT0.elf" @"objects.list"   -mcpu=cortex-m3 -T"D:\embedded diploma\unit6\work_space\INT\EXT_INT0\STM32F103C6TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="EXT_INT0.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: EXT_INT0.elf
 
arm-none-eabi-size   EXT_INT0.elf 
arm-none-eabi-objdump -h -S  EXT_INT0.elf  > "EXT_INT0.list"
arm-none-eabi-objcopy  -O binary  EXT_INT0.elf  "EXT_INT0.bin"
   text	   data	    bss	    dec	    hex	filename
    752	      8	   1568	   2328	    918	EXT_INT0.elf
Finished building: default.size.stdout
 
Finished building: EXT_INT0.bin
Finished building: EXT_INT0.list
 
 
17:37:49 **** Incremental Build of configuration Debug for project EXT_INT0 ****
make -j8 all 
arm-none-eabi-gcc -gdwarf-2 "../Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DSTM32 -DSTM32F1 -DSTM32F103C6Tx -DDEBUG -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/main.o"
arm-none-eabi-gcc -gdwarf-2 -o "EXT_INT0.elf" @"objects.list"   -mcpu=cortex-m3 -T"D:\embedded diploma\unit6\work_space\INT\EXT_INT0\STM32F103C6TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="EXT_INT0.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: EXT_INT0.elf
 
arm-none-eabi-objdump -h -S  EXT_INT0.elf  > "EXT_INT0.list"
arm-none-eabi-objcopy  -O binary  EXT_INT0.elf  "EXT_INT0.bin"
arm-none-eabi-size   EXT_INT0.elf 
   text	   data	    bss	    dec	    hex	filename
    748	      8	   1568	   2324	    914	EXT_INT0.elf
Finished building: default.size.stdout
 
Finished building: EXT_INT0.bin
Finished building: EXT_INT0.list
 
 
18:00:40 **** Incremental Build of configuration Debug for project EXT_INT0 ****
make -j8 all 
arm-none-eabi-gcc -gdwarf-2 "../Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DSTM32 -DSTM32F1 -DSTM32F103C6Tx -DDEBUG -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/main.o"
arm-none-eabi-gcc -gdwarf-2 -o "EXT_INT0.elf" @"objects.list"   -mcpu=cortex-m3 -T"D:\embedded diploma\unit6\work_space\INT\EXT_INT0\STM32F103C6TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="EXT_INT0.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: EXT_INT0.elf
 
arm-none-eabi-objdump -h -S  EXT_INT0.elf  > "EXT_INT0.list"
arm-none-eabi-objcopy  -O binary  EXT_INT0.elf  "EXT_INT0.bin"
arm-none-eabi-size   EXT_INT0.elf 
   text	   data	    bss	    dec	    hex	filename
    760	      8	   1568	   2336	    920	EXT_INT0.elf
Finished building: default.size.stdout
 
Finished building: EXT_INT0.bin
Finished building: EXT_INT0.list
 
 
18:05:18 **** Incremental Build of configuration Debug for project EXT_INT0 ****
make -j8 all 
arm-none-eabi-size   EXT_INT0.elf 
   text	   data	    bss	    dec	    hex	filename
    760	      8	   1568	   2336	    920	EXT_INT0.elf
Finished building: default.size.stdout
 
18:22:54 **** Incremental Build of configuration Debug for project EXT_INT0 ****
make -j8 all 
arm-none-eabi-gcc -gdwarf-2 "../Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DSTM32 -DSTM32F1 -DSTM32F103C6Tx -DDEBUG -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/main.o"
arm-none-eabi-gcc -gdwarf-2 -o "EXT_INT0.elf" @"objects.list"   -mcpu=cortex-m3 -T"D:\embedded diploma\unit6\work_space\INT\EXT_INT0\STM32F103C6TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="EXT_INT0.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: EXT_INT0.elf
 
arm-none-eabi-objdump -h -S  EXT_INT0.elf  > "EXT_INT0.list"
arm-none-eabi-objcopy  -O binary  EXT_INT0.elf  "EXT_INT0.bin"
arm-none-eabi-size   EXT_INT0.elf 
   text	   data	    bss	    dec	    hex	filename
    760	      8	   1568	   2336	    920	EXT_INT0.elf
Finished building: default.size.stdout
 
Finished building: EXT_INT0.bin
Finished building: EXT_INT0.list
 
 
18:25:32 **** Incremental Build of configuration Debug for project EXT_INT0 ****
make -j8 all 
arm-none-eabi-gcc -gdwarf-2 "../Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DSTM32 -DSTM32F1 -DSTM32F103C6Tx -DDEBUG -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/main.o"
arm-none-eabi-gcc -gdwarf-2 -o "EXT_INT0.elf" @"objects.list"   -mcpu=cortex-m3 -T"D:\embedded diploma\unit6\work_space\INT\EXT_INT0\STM32F103C6TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="EXT_INT0.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: EXT_INT0.elf
 
arm-none-eabi-objdump -h -S  EXT_INT0.elf  > "EXT_INT0.list"
arm-none-eabi-objcopy  -O binary  EXT_INT0.elf  "EXT_INT0.bin"
arm-none-eabi-size   EXT_INT0.elf 
   text	   data	    bss	    dec	    hex	filename
    760	      8	   1568	   2336	    920	EXT_INT0.elf
Finished building: default.size.stdout
 
Finished building: EXT_INT0.bin
Finished building: EXT_INT0.list
 
 
18:31:13 **** Incremental Build of configuration Debug for project EXT_INT0 ****
make -j8 all 
arm-none-eabi-gcc -gdwarf-2 "../Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DSTM32 -DSTM32F1 -DSTM32F103C6Tx -DDEBUG -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/main.o"
arm-none-eabi-gcc -gdwarf-2 -o "EXT_INT0.elf" @"objects.list"   -mcpu=cortex-m3 -T"D:\embedded diploma\unit6\work_space\INT\EXT_INT0\STM32F103C6TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="EXT_INT0.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: EXT_INT0.elf
 
arm-none-eabi-objdump -h -S  EXT_INT0.elf  > "EXT_INT0.list"
arm-none-eabi-objcopy  -O binary  EXT_INT0.elf  "EXT_INT0.bin"
arm-none-eabi-size   EXT_INT0.elf 
   text	   data	    bss	    dec	    hex	filename
    760	      8	   1568	   2336	    920	EXT_INT0.elf
Finished building: default.size.stdout
 
Finished building: EXT_INT0.bin
Finished building: EXT_INT0.list
 
 
